compiler/typ/tests/fixtures/diagnostics/0140_adt_recursive_list_payload_mismatch_02.ml.infer.expected
File "0140_adt_recursive_list_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0140_adt_recursive_list_payload_mismatch_02 is not a valid module name.

File "0140_adt_recursive_list_payload_mismatch_02.ml", line 2, characters 37-41:
2 | let _ : int mylist_beta = Cons_beta (true, Nil_beta)
                                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
